--- a/Readme
+++ b/Readme
@@ -1,23 +1,33 @@
-It is all packages of BeCJK 1.0 Beta 2,
-No help & documents... :)
+BeCJK & History
+=======================
+
+BeCJK, is an input method for the legancy BeOS, first Developed by Anthony.Lee.
+
+Now, this copy of code is gotten from Andraw Bachmann. 
+
+As time goes on, expecially with using of Haiku PM, BeCJK can't work normally on
+Haiku recently release.
+
+Building 
+=======================
+
+Pre-requisite software
+--------------------------------------
+* mercurial, get current code of BeCJK
+* scons, tools for building BeCJK
+
+Components
+=======================
+
+The code of BeCJK is released as three parts, including:
+
+* besavager, known as Savager Workroom Development Toolkit for BeOS, as a sharedlibrary.
+* BeCJK, main code for BeCJK IME, which will be built as an Add-on for Haiku/BeOS.
+* dicts, several dictionaries for BeCJK, as working as modules which could be loaded into BeCJK.
 
 
-x86 install:
-	besavager-1.0-x86.pkg
-	BeCJK-dictionary-1.0Beta2.zip
-	BeCJK-1.0Beta2-x86.pkg
-
-
-ppc install:
-	besavager-1.0-ppc.pkg
-	BeCJK-dictionary-1.0Beta2.zip
-	BeCJK-1.0Beta2-ppc.pkg
-
-
-sources:
-	besavager-1.0-src.zip
-	BeCJK-1.0Beta2-src.zip
-
+CopyRights:
+=======================
 
 copyright: (C) 2001-2002 Anthony Lee <anthonylee@eLong.com>
 	BeSavager	---	freeware under LGPL2
